--- a/amplify/backend/function/UserServiceLambda/src/package.json
+++ b/amplify/backend/function/UserServiceLambda/src/package.json
@@ -6,6 +6,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "3.272.0",
+    "@aws-sdk/client-ssm": "^3.272.0",
     "aws-serverless-express": "3.3.5",
     "body-parser": "1.17.1",
     "express": "4.15.2"
