--- a/amplify/backend/function/myapplicationsecretaawsSdkSSM/myapplicationsecretaawsSdkSSM-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretaawsSdkSSM/myapplicationsecretaawsSdkSSM-awscloudformation-template.json
@@ -1,6 +1,6 @@
 {
   "AWSTemplateFormatVersion": "2010-09-09",
-  "Description": "Lambda layer resource stack creation using Amplify CLI",
+  "Description": "{\"createdOn\":\"Linux\",\"createdBy\":\"Amplify\",\"createdWith\":\"10.7.3\",\"stackType\":\"function-LambdaLayer\",\"metadata\":{}}",
   "Parameters": {
     "env": {
       "Type": "String"
@@ -20,7 +20,7 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersione3c36375": {
+    "LambdaLayerVersioneb154920": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
         "CompatibleRuntimes": {
@@ -51,12 +51,12 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPrivatee3c36375": {
+    "LambdaLayerPermissionPrivateeb154920": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
         "LayerVersionArn": {
-          "Ref": "LambdaLayerVersione3c36375"
+          "Ref": "LambdaLayerVersioneb154920"
         },
         "Principal": {
           "Ref": "AWS::AccountId"
@@ -67,7 +67,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersione3c36375"
+        "Ref": "LambdaLayerVersioneb154920"
       }
     }
   }
