removed redirect url locslhost

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -77,25 +77,25 @@
       "build": true,
       "dependsOn": [
         {
-          "category": "function",
-          "resourceName": "myapplicationsecretaawsSdkSSM",
           "attributes": [
             "Arn"
-          ]
+          ],
+          "category": "function",
+          "resourceName": "myapplicationsecretaawsSdkSSM"
         },
         {
-          "category": "function",
-          "resourceName": "myapplicationsecretafuse",
           "attributes": [
             "Arn"
-          ]
+          ],
+          "category": "function",
+          "resourceName": "myapplicationsecretafuse"
         },
         {
-          "category": "function",
-          "resourceName": "myapplicationsecretanodeFetch",
           "attributes": [
             "Arn"
-          ]
+          ],
+          "category": "function",
+          "resourceName": "myapplicationsecretanodeFetch"
         },
         {
           "attributes": [
