--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_AWS_BRANCH=$AWS_BRANCH
-REACT_APP_AWS_COMMIT_ID=$AWS_COMMIT_ID
-REACT_APP_AWS_USERPOOLID=$AUTH_MYAPPLICATIONSECRETARYAMPLIFY_USERPOOLID
+NEXT_PUBLIC_AWS_BRANCH=$AWS_BRANCH
+NEXT_PUBLIC_AWS_COMMIT_ID=$AWS_COMMIT_ID
+NEXT_PUBLIC_AWS_USERPOOLID=$AUTH_MYAPPLICATIONSECRETARYAMPLIFY_USERPOOLID
