--- a/amplify/backend/function/UserServiceLambda/src/package.json
+++ b/amplify/backend/function/UserServiceLambda/src/package.json
@@ -6,9 +6,9 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "3.272.0",
-    "@aws-sdk/client-ssm": "^3.272.0",
     "aws-serverless-express": "3.3.5",
     "body-parser": "1.17.1",
+    "dotenv": "16.0.3",
     "express": "4.15.2"
   },
   "devDependencies": {
