--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-router-dom": "5.3.3",
+    "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "5.48.1",
-    "@typescript-eslint/parser": "5.48.1",
-    "@types/styled-components": "5.1.26"
+    "@typescript-eslint/parser": "5.48.1"
   },
   "scripts": {
     "dev": "next dev",
