--- a/amplify/backend/function/UserServiceLambda/src/package.json
+++ b/amplify/backend/function/UserServiceLambda/src/package.json
@@ -8,7 +8,7 @@
     "@aws-sdk/client-cognito-identity-provider": "3.272.0",
     "aws-serverless-express": "3.3.5",
     "body-parser": "1.17.1",
-    "dotenv": "16.0.3",
+    "dotenv": "^16.0.3",
     "express": "4.15.2"
   },
   "devDependencies": {
