--- a/amplify/backend/function/myapplicationsecretafuse/myapplicationsecretafuse-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretafuse/myapplicationsecretafuse-awscloudformation-template.json
@@ -20,23 +20,19 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersionc84556ef": {
+    "LambdaLayerVersion34c177b4": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": {
-          "Ref": "runtimes"
-        },
+        "CompatibleRuntimes": [
+          "nodejs14.x"
+        ],
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": {
-            "Ref": "s3Key"
-          }
+          "S3Key": "amplify-builds/myapplicationsecretafuse-LambdaLayerVersion34c177b4-build.zip"
         },
-        "Description": {
-          "Ref": "description"
-        },
+        "Description": "Updated layer version 2023-02-22T20:06:31.186Z",
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretafuse-${env}",
@@ -51,13 +47,11 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPrivatec84556ef": {
+    "LambdaLayerPermissionPrivate34c177b4": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": {
-          "Ref": "LambdaLayerVersionc84556ef"
-        },
+        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretafuse-dev:11",
         "Principal": {
           "Ref": "AWS::AccountId"
         }
@@ -67,7 +61,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersionc84556ef"
+        "Ref": "LambdaLayerVersion34c177b4"
       }
     }
   }
