updated schema to better respond to nosql queries

--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -10,8 +10,8 @@
     "config": {
       "SourceDir": "src",
       "DistributionDir": ".next",
-      "BuildCommand": "npm run build",
-      "StartCommand": "npm run start"
+      "BuildCommand": "yarn run build",
+      "StartCommand": "yarn run start"
     }
   }
 }
