--- a/amplify/backend/function/myapplicationsecretaawsSdkSSM/myapplicationsecretaawsSdkSSM-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretaawsSdkSSM/myapplicationsecretaawsSdkSSM-awscloudformation-template.json
@@ -20,19 +20,23 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersionae10b4d5": {
+    "LambdaLayerVersiond34816b6": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": [
-          "nodejs14.x"
-        ],
+        "CompatibleRuntimes": {
+          "Ref": "runtimes"
+        },
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": "amplify-builds/myapplicationsecretaawsSdkSSM-LambdaLayerVersionae10b4d5-build.zip"
+          "S3Key": {
+            "Ref": "s3Key"
+          }
         },
-        "Description": "Updated layer version 2023-02-22T20:06:31.186Z",
+        "Description": {
+          "Ref": "description"
+        },
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretaawsSdkSSM-${env}",
@@ -47,11 +51,13 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPrivateae10b4d5": {
+    "LambdaLayerPermissionPrivated34816b6": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretaawsSdkSSM-dev:9",
+        "LayerVersionArn": {
+          "Ref": "LambdaLayerVersiond34816b6"
+        },
         "Principal": {
           "Ref": "AWS::AccountId"
         }
@@ -61,7 +67,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersionae10b4d5"
+        "Ref": "LambdaLayerVersiond34816b6"
       }
     }
   }
