--- a/amplify/backend/function/UserServiceLambda/src/package.json
+++ b/amplify/backend/function/UserServiceLambda/src/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
-    "aws-serverless-express": "^3.3.5",
-    "body-parser": "^1.17.1",
-    "dotenv": "^16.0.3",
-    "express": "^4.15.2"
+    "@aws-sdk/client-cognito-identity-provider": "3.279.0",
+    "@aws-sdk/client-ssm": "^3.279.0",
+    "aws-serverless-express": "3.3.5",
+    "body-parser": "1.17.1",
+    "dotenv": "16.0.3",
+    "express": "4.15.2"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.92"
+    "@aws-sdk/client-dynamodb": "^3.279.0",
+    "@types/aws-lambda": "8.10.92",
+    "fuse.js": "^6.6.2"
   }
 }
