--- a/amplify/backend/function/UserServiceLambda/src/package.json
+++ b/amplify/backend/function/UserServiceLambda/src/package.json
@@ -12,6 +12,9 @@
     "express": "4.15.2"
   },
   "devDependencies": {
-    "@types/aws-lambda": "8.10.92"
+    "@aws-sdk/client-dynamodb": "^3.279.0",
+    "@aws-sdk/client-ssm": "^3.279.0",
+    "@types/aws-lambda": "8.10.92",
+    "fuse.js": "^6.6.2"
   }
 }
