--- a/amplify/backend/function/UserServiceLambda/src/package.json
+++ b/amplify/backend/function/UserServiceLambda/src/package.json
@@ -12,9 +12,6 @@
     "express": "4.15.2"
   },
   "devDependencies": {
-    "@aws-sdk/client-dynamodb": "^3.279.0",
-    "@aws-sdk/client-ssm": "^3.279.0",
-    "@types/aws-lambda": "8.10.92",
-    "fuse.js": "^6.6.2"
+    "@types/aws-lambda": "8.10.92"
   }
 }
