--- a/amplify/backend/function/myapplicationsecretaawsSdkSSM/myapplicationsecretaawsSdkSSM-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretaawsSdkSSM/myapplicationsecretaawsSdkSSM-awscloudformation-template.json
@@ -20,19 +20,23 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersionb5e1427b": {
+    "LambdaLayerVersiond6490294": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": [
-          "nodejs14.x"
-        ],
+        "CompatibleRuntimes": {
+          "Ref": "runtimes"
+        },
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": "amplify-builds/myapplicationsecretaawsSdkSSM-LambdaLayerVersionb5e1427b-build.zip"
+          "S3Key": {
+            "Ref": "s3Key"
+          }
         },
-        "Description": "Updated layer version 2023-02-25T04:21:27.724Z",
+        "Description": {
+          "Ref": "description"
+        },
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretaawsSdkSSM-${env}",
@@ -47,11 +51,13 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPrivateb5e1427b": {
+    "LambdaLayerPermissionPrivated6490294": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretaawsSdkSSM-dev:15",
+        "LayerVersionArn": {
+          "Ref": "LambdaLayerVersiond6490294"
+        },
         "Principal": {
           "Ref": "AWS::AccountId"
         }
@@ -61,7 +67,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersionb5e1427b"
+        "Ref": "LambdaLayerVersiond6490294"
       }
     }
   }
