--- a/amplify/backend/function/myapplicationsecretanodeFetch/myapplicationsecretanodeFetch-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretanodeFetch/myapplicationsecretanodeFetch-awscloudformation-template.json
@@ -20,19 +20,23 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersion202578b2": {
+    "LambdaLayerVersion48148da0": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": [
-          "nodejs14.x"
-        ],
+        "CompatibleRuntimes": {
+          "Ref": "runtimes"
+        },
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": "amplify-builds/myapplicationsecretanodeFetch-LambdaLayerVersion202578b2-build.zip"
+          "S3Key": {
+            "Ref": "s3Key"
+          }
         },
-        "Description": "Updated layer version 2023-02-25T04:21:27.724Z",
+        "Description": {
+          "Ref": "description"
+        },
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretanodeFetch-${env}",
@@ -47,11 +51,13 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPrivate202578b2": {
+    "LambdaLayerPermissionPrivate48148da0": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretanodeFetch-dev:17",
+        "LayerVersionArn": {
+          "Ref": "LambdaLayerVersion48148da0"
+        },
         "Principal": {
           "Ref": "AWS::AccountId"
         }
@@ -61,7 +67,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersion202578b2"
+        "Ref": "LambdaLayerVersion48148da0"
       }
     }
   }
