--- a/amplify/backend/function/myapplicationsecretafuse/myapplicationsecretafuse-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretafuse/myapplicationsecretafuse-awscloudformation-template.json
@@ -20,23 +20,19 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersionaf81895b": {
+    "LambdaLayerVersion4eb39a4f": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": {
-          "Ref": "runtimes"
-        },
+        "CompatibleRuntimes": [
+          "nodejs14.x"
+        ],
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": {
-            "Ref": "s3Key"
-          }
+          "S3Key": "amplify-builds/myapplicationsecretafuse-LambdaLayerVersion4eb39a4f-build.zip"
         },
-        "Description": {
-          "Ref": "description"
-        },
+        "Description": "Updated layer version 2023-02-25T09:04:41.953Z",
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretafuse-${env}",
@@ -51,13 +47,11 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPrivateaf81895b": {
+    "LambdaLayerPermissionPrivate4eb39a4f": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": {
-          "Ref": "LambdaLayerVersionaf81895b"
-        },
+        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretafuse-dev:21",
         "Principal": {
           "Ref": "AWS::AccountId"
         }
@@ -67,7 +61,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersionaf81895b"
+        "Ref": "LambdaLayerVersion4eb39a4f"
       }
     }
   }
