--- a/amplify/backend/function/myapplicationsecretanlp/myapplicationsecretanlp-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretanlp/myapplicationsecretanlp-awscloudformation-template.json
@@ -20,7 +20,7 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersion88cfd212": {
+    "LambdaLayerVersion974c1472": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
         "CompatibleRuntimes": {
@@ -39,7 +39,7 @@
         },
         "LayerName": {
           "Fn::Sub": [
-            "myapplicationsecretaawsSdkSSM-${env}",
+            "myapplicationsecretanlp-${env}",
             {
               "env": {
                 "Ref": "env"
@@ -51,23 +51,21 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPrivate88cfd212": {
+    "LambdaLayerPermissionPublic974c1472": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
         "LayerVersionArn": {
-          "Ref": "LambdaLayerVersion88cfd212"
+          "Ref": "LambdaLayerVersion974c1472"
         },
-        "Principal": {
-          "Ref": "AWS::AccountId"
-        }
+        "Principal": "*"
       }
     }
   },
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersion88cfd212"
+        "Ref": "LambdaLayerVersion974c1472"
       }
     }
   }
