--- a/amplify/backend/function/myapplicationsecretafuse/myapplicationsecretafuse-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretafuse/myapplicationsecretafuse-awscloudformation-template.json
@@ -1,6 +1,6 @@
 {
   "AWSTemplateFormatVersion": "2010-09-09",
-  "Description": "{\"createdOn\":\"Mac\",\"createdBy\":\"Amplify\",\"createdWith\":\"10.5.2\",\"stackType\":\"function-LambdaLayer\",\"metadata\":{}}",
+  "Description": "Lambda layer resource stack creation using Amplify CLI",
   "Parameters": {
     "env": {
       "Type": "String"
@@ -20,23 +20,23 @@
     }
   },
   "Resources": {
-<<<<<<< HEAD
-    "LambdaLayerVersion7c3c789b": {
-=======
-    "LambdaLayerVersion49f02fe1": {
->>>>>>> prod2
+    "LambdaLayerVersionf3949166": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": [
-          "nodejs14.x"
-        ],
+        "CompatibleRuntimes": {
+          "Ref": "runtimes"
+        },
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": "amplify-builds/myapplicationsecretafuse-LambdaLayerVersion7c3c789b-build.zip"
+          "S3Key": {
+            "Ref": "s3Key"
+          }
         },
-        "Description": "Updated layer version 2023-02-25T09:42:45.840Z",
+        "Description": {
+          "Ref": "description"
+        },
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretafuse-${env}",
@@ -51,21 +51,13 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-<<<<<<< HEAD
-    "LambdaLayerPermissionPrivate7c3c789b": {
-      "Type": "AWS::Lambda::LayerVersionPermission",
-      "Properties": {
-        "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretafuse-dev:22",
-=======
-    "LambdaLayerPermissionPrivate49f02fe1": {
+    "LambdaLayerPermissionPrivatef3949166": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
         "LayerVersionArn": {
-          "Ref": "LambdaLayerVersion49f02fe1"
+          "Ref": "LambdaLayerVersionf3949166"
         },
->>>>>>> prod2
         "Principal": {
           "Ref": "AWS::AccountId"
         }
@@ -75,11 +67,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-<<<<<<< HEAD
-        "Ref": "LambdaLayerVersion7c3c789b"
-=======
-        "Ref": "LambdaLayerVersion49f02fe1"
->>>>>>> prod2
+        "Ref": "LambdaLayerVersionf3949166"
       }
     }
   }
