--- a/amplify/backend/function/myapplicationsecretanodeFetch/myapplicationsecretanodeFetch-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretanodeFetch/myapplicationsecretanodeFetch-awscloudformation-template.json
@@ -1,6 +1,6 @@
 {
   "AWSTemplateFormatVersion": "2010-09-09",
-  "Description": "{\"createdOn\":\"Mac\",\"createdBy\":\"Amplify\",\"createdWith\":\"10.5.2\",\"stackType\":\"function-LambdaLayer\",\"metadata\":{}}",
+  "Description": "Lambda layer resource stack creation using Amplify CLI",
   "Parameters": {
     "env": {
       "Type": "String"
@@ -20,23 +20,23 @@
     }
   },
   "Resources": {
-<<<<<<< HEAD
-    "LambdaLayerVersion81221399": {
-=======
-    "LambdaLayerVersion1e817f30": {
->>>>>>> prod2
+    "LambdaLayerVersion9924f7bd": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": [
-          "nodejs14.x"
-        ],
+        "CompatibleRuntimes": {
+          "Ref": "runtimes"
+        },
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": "amplify-builds/myapplicationsecretanodeFetch-LambdaLayerVersion81221399-build.zip"
+          "S3Key": {
+            "Ref": "s3Key"
+          }
         },
-        "Description": "Updated layer version 2023-02-25T09:42:45.840Z",
+        "Description": {
+          "Ref": "description"
+        },
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretanodeFetch-${env}",
@@ -51,21 +51,13 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-<<<<<<< HEAD
-    "LambdaLayerPermissionPrivate81221399": {
-      "Type": "AWS::Lambda::LayerVersionPermission",
-      "Properties": {
-        "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretanodeFetch-dev:22",
-=======
-    "LambdaLayerPermissionPrivate1e817f30": {
+    "LambdaLayerPermissionPrivate9924f7bd": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
         "LayerVersionArn": {
-          "Ref": "LambdaLayerVersion1e817f30"
+          "Ref": "LambdaLayerVersion9924f7bd"
         },
->>>>>>> prod2
         "Principal": {
           "Ref": "AWS::AccountId"
         }
@@ -75,11 +67,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-<<<<<<< HEAD
-        "Ref": "LambdaLayerVersion81221399"
-=======
-        "Ref": "LambdaLayerVersion1e817f30"
->>>>>>> prod2
+        "Ref": "LambdaLayerVersion9924f7bd"
       }
     }
   }
